@@ -1,3 +1,9 @@
+Fri Sep 27 10:27 2013 CDT
+    * lib/channel.js: Change the link regex, change the way 'affects links'
+      works.  The default link filter will only transform a link of no
+      previous filters transform it (and filters will only transform a link
+      if 'affects links' is ticked).
+
 Thu Sep 26 23:40 2013 CDT
     * lib/config.js: Add config keys for statistics interval & max age,
       alias purge interval & max age.
